# music2db-server

./: .gitignore  LICENSE  README.md  config.yaml  install.sh  pyproject.toml
config/: config.yaml  logging.yaml
docs/: music2db-client-contract.md
packaging/: music2db-server.service
src/: server.py
src/music2db_server/: __init__.py  cli.py  config_loader.py  embeddings.py  logging_setup.py  server copy.py  server.py  settings.py
tests/: test_logging_setup.py  test_server.py
